<resources>
    <string name="app_name">carpal</string>
    <string name="register">Register</string>
    <string name="update_user">Update User</string>
    <string name="click_here_to_reset">Click to reset</string>
    <string name="update_email_u"> Update Email</string>
    <string name="upload_pic_u"> Upload Profile pic</string>
    <string name="enter_your_mobile_no">enter your mobile no.</string>
    <string name="sign_up">Sign-up</string>
    <string name="update"> Provide details </string>
    <string name="register_text">Please register yourself to continue with the amazing experience!</string>
    <string name="update_text">Please provide information so we find the right car pals for you!</string>
    <string name="parent_full_name">Parent Full Name*</string>
    <string name="enter_parents_full_name">enter parent\'s full name</string>
    <string name="full_name">Full Name*</string>
    <string name="child_full_name">enter child\'s full name</string>
    <string name="email">Email*</string>
    <string name="email_address">enter your email address</string>
    <string name="date_of_birth">Date of Birth (dd/mm/yyyy)*</string>
    <string name="select_your_dob_hint">select your dob</string>
    <string name="gender">Gender*</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="school">School*</string>
    <string name="ihs">IHS</string>
    <string name="horner">Horner Jr.</string>
    <string name="mobile">Mobile*</string>
    <string name="password">Password*</string>
    <string name="enter_password">enter your password</string>
    <string name="terms">I agree with the Terms of Service and Privacy Policy</string>
</resources>