<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        tools:context=".RegisterActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@color/light_purple">
                <TextView
                    android:id="@+id/textView_register_head"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/white"
                    android:text="@string/sign_up"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
                <TextView
                    android:id="@+id/textView_register_instruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_below="@id/textView_register_head"
                    android:text="@string/register_text"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="-50dp"
                android:background="@drawable/border"
                android:padding="15dp">

                <RelativeLayout
                    android:id="@+id/RL_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border">

                    <ImageView
                        android:id="@+id/imageViewEmail"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/ic_email" />

                    <TextView
                        android:id="@+id/textView_register_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/imageViewEmail"
                        android:padding="6dp"
                        android:text="@string/email" />

                    <View
                        android:id="@+id/divider_email"
                        android:layout_width="250dp"
                        android:layout_height="1dp"
                        android:layout_below="@id/textView_register_email"
                        android:layout_centerHorizontal="true"
                        android:background="@android:color/darker_gray" />

                    <EditText
                        android:id="@+id/editText_register_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textView_register_email"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toEndOf="@id/imageViewEmail"
                        android:background="@android:color/transparent"
                        android:hint="@string/email_address"
                        android:inputType="textEmailAddress"
                        android:padding="6dp"
                        android:textCursorDrawable="@drawable/edit_text_cursor"
                        android:textSize="16sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/RL_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/RL_email"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border">
                    <ImageView
                        android:id="@+id/imageViewPwd"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/ic_pwd_bw" />
                    <TextView
                        android:id="@+id/textView_register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/imageViewPwd"
                        android:padding="6dp"
                        android:text="@string/password" />
                    <View
                        android:id="@+id/divider_pwd"
                        android:layout_width="250dp"
                        android:layout_height="1dp"
                        android:layout_below="@id/textView_register_password"
                        android:layout_centerHorizontal="true"
                        android:background="@android:color/darker_gray" />

                    <EditText
                        android:id="@+id/editText_register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textView_register_password"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toEndOf="@id/imageViewPwd"
                        android:background="@android:color/transparent"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:padding="6dp"
                        android:textCursorDrawable="@drawable/edit_text_cursor"
                        android:textSize="16sp" />
                    <ImageView
                        android:id="@+id/imageView_show_hide_pwd"
                        android:layout_width="33dp"
                        android:layout_height="33dp"
                        android:layout_below="@id/textView_register_password"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp" />
                </RelativeLayout>
                <CheckBox
                    android:id="@+id/checkBox_terms_conditions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/RL_pwd"
                    android:layout_marginTop="10dp"
                    android:buttonTint="@color/light_purple"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:text="@string/terms"
                    android:textColor="#444" />

                <Button
                    android:id="@+id/button_register"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/checkBox_terms_conditions"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp"
                    android:text="@string/register" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:elevation="10dp"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</ScrollView>